🐛 fix: fixes porject title which disappear on dark mode

--- a/src/styles/_themes.scss
+++ b/src/styles/_themes.scss
@@ -186,7 +186,7 @@ div {
   }
 }
 
-p {
+p, .cardTitle {
   @include themify($themes) {
     color: themed("textColor");
   }
